--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ let allCategories = [];
 // Parse the HTML file
 async function parseGamesFromHTML() {
   try {
-    const response = await fetch('https://corsproxy.io/?https://v3.gostreameast.link/');
+    const response = await fetch('https://v3.gostreameast.link/');
     if (!response.ok) throw new Error('Failed to load game data from server');
     
     const htmlText = await response.text();
